log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:40:11 PM UTC: 
 tests:  0|6
total_score: 0/70
c5a0cd1
Thu 30 Mar 2023 03:46:09 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
1a3ce2d
Thu 30 Mar 2023 03:46:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a0e874e
Thu 30 Mar 2023 03:48:00 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:17: error: ‘arrayList’ undeclared (first use in this function); did you mean ‘ArrayList’?
   15 |   dato = malloc(arrayList *);
      |                 ^~~~~~~~~
      |                 ArrayList
arraylist.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:15:28: error: expected expression before ‘)’ token
   15 |   dato = malloc(arrayList *);
      |                            ^
Compilation failed
7db5eba
Thu 30 Mar 2023 03:48:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:17: error: expected expression before ‘ArrayList’
   15 |   dato = malloc(ArrayList *);
      |                 ^~~~~~~~~
Compilation failed
348c379
Thu 30 Mar 2023 03:51:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b3c5072
Thu 30 Mar 2023 03:55:21 PM UTC: 
 arraylist.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:12: error: ‘dato’ undeclared (first use in this function)
   19 |     return dato;
      |            ^~~~
arraylist.c:19:12: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
66d5313
Thu 30 Mar 2023 03:55:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:16:50: error: ‘*listAux.capacity’ is used uninitialized [-Werror=uninitialized]
   16 |   listAux->data = malloc(sizeof(void *) * listAux->capacity);
      |                                           ~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c49117d
Thu 30 Mar 2023 03:56:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:62: error: expected ‘)’ before ‘;’ token
   16 |   listAux->data = malloc(sizeof(void *) * (listAux->capacity);
      |                         ~                                    ^
      |                                                              )
arraylist.c:19:20: error: expected ‘;’ before ‘}’ token
   19 |     return listAux;
      |                    ^
      |                    ;
   20 | }
      | ~                   
arraylist.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60a0a77
Thu 30 Mar 2023 03:56:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:42: error: invalid operands to binary * (have ‘void *’ and ‘int’)
   16 |   listAux->data = malloc(sizeof(void *)) * (listAux->capacity);
      |                   ~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~
      |                   |                                |
      |                   void *                           int
Compilation failed
1cf7a64
Thu 30 Mar 2023 03:56:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:16:51: error: ‘*listAux.capacity’ is used uninitialized [-Werror=uninitialized]
   16 |   listAux->data = malloc(sizeof(void *) * (listAux->capacity));
      |                                           ~~~~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a29c637
Thu 30 Mar 2023 03:57:12 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7b219c9
Thu 30 Mar 2023 04:08:15 PM UTC: 
 arraylist.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|5
total_score: 10/70
99423c5
Thu 30 Mar 2023 04:10:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
59042f9
Thu 30 Mar 2023 04:18:30 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:40:26: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   40 |   if(i > l->size) return NULL;
      |                          ^~~~
arraylist.c:34:6: note: declared here
   34 | void push(ArrayList * l, void * data, int i){
      |      ^~~~
cc1: all warnings being treated as errors
Compilation failed
f3ca53d
